--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.password=123456
 
 mybatis.mapper-locations: classpath:mapping/*.xml
 mybatis.type-aliases-package: com.winter.entity
+
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
+
