--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8081
 server.servlet.context-path=/
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,5 +9,41 @@ spring.datasource.password=199399
 mybatis.mapper-locations: classpath:mapping/*.xml
 mybatis.type-aliases-package: com.winter.entity
 
+# Sa-Token??
+# token ?? (????cookie??)
+sa-token.token-name=satoken
+# token ??????s ??30?, -1??????
+sa-token.timeout=-1
+# token ????? (???????????token??) ??: ?
+sa-token.activity-timeout=-1
+# ???????????? (?true???????, ?false?????????)
+sa-token.is-concurrent=true
+# ?????????????????token (?true?????????token, ?false?????????token)
+sa-token.is-share=false
+# token??
+sa-token.token-style=uuid
+# ????????
+sa-token.is-log=true
+# jwt??
+sa-token.jwt-secret-key=asdasdasifhueuisdfasdfasd
+# redis??
+# Redis?????????0?
+spring.redis.database=1
+# Redis?????
+spring.redis.host=61.171.45.27
+# Redis???????
+spring.redis.port=6379
+# Redis?????????????
+spring.redis.password=liu1993
+# ??????
+spring.redis.timeout=10s
+# ????????
+spring.redis.lettuce.pool.max-active=200
+# ???????????????????????
+spring.redis.lettuce.pool.max-wait=-1ms
+# ???????????
+spring.redis.lettuce.pool.max-idle=10
+# ???????????
+spring.redis.lettuce.pool.min-idle=0
 
 
